Mod: scrollbar style fix

--- a/browser-app/src/index.css
+++ b/browser-app/src/index.css
@@ -291,26 +291,33 @@ video:focus {
 
 /*Custom scrollbar*/
 /*For Sidebar*/
-/*.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar,*/
 .test-sidebar::-webkit-scrollbar {
-  width: 16px;
-  background-color: red;
+  width: 10px;
 }
-/*.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar-track,*/
 .test-sidebar::-webkit-scrollbar-track {
-  /*border-radius: 8px;*/
-  background-color: lime;
+  border-radius: 5px;
 }
-/*.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar-thumb,*/
 .test-sidebar::-webkit-scrollbar-thumb {
-  /*height: 56px;*/
-  /*border-radius: 8px;*/
-  border: 4px solid fuchsia;
+  border-radius: 5px;
+  border: 2px solid transparent;
   background-clip: content-box;
+  /*background-color: transparent;*/
   background-color: #69747F;
 }
-/*.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar-thumb:hover,*/
-.test-sidebar::-webkit-scrollbar-thumb:hover {
+.test-sidebar:hover::-webkit-scrollbar-thumb {
+  /*background-color: #69747F;*/
+}
+/*For content*/
+.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar {
+  width: 12px;
+}
+.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar-track {
+  border-radius: 6px;
+}
+.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  border: 2px solid transparent;
+  background-clip: content-box;
   background-color: #69747F;
 }
 
@@ -710,6 +717,7 @@ video:focus {
     rgba(0,0,0,.1),
     rgba(0,0,0,.4), rgba(0,0,0,.4), rgba(0,0,0,.4)
   );
+  background-color: rgba(114,124,245,.7)!important;
   background-size: 400%;
   box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.3);
   transition: all .3s ease;
@@ -768,13 +776,13 @@ video:focus {
   text-transform: uppercase;
   color: #8391a2;
   font-weight: 700;
-  padding: 25px 25px 15px 25px;
+  padding: 25px 25px 15px 30px;
   font-size: 12px;
 }
 .side-nav-link {
   cursor: pointer;
   color: #8391a2;
-  padding: 12px 25px;
+  padding: 12px 15px 12px 30px;
   position: relative;
   transition: all .3s ease-in-out;
   list-style: none;
@@ -799,7 +807,7 @@ video:focus {
 .menu-arrow {
   line-height: 1.6;
   position: absolute;
-  right: 25px;
+  right: 19px;
   display: inline-block;
 }
 .menu-arrow i {
